welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit=false
  while (vuBiscuit=false?{
    for(compteur<-1 to 5){
    avance()
    if (estSurBiscuit()==true){
    	vuBiscuit=true  
    }
    }
  }
         
return vuBiscuit
}